--- a/lib/neon_animation_examples.html
+++ b/lib/neon_animation_examples.html
@@ -2,6 +2,7 @@
   <!-- <link rel="import" href="../../packages/<some polymer package>/<some element>.html"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="import" href="basic.html">
+  <link rel="import" href="cascaded.html">
 </head>
 
 <dom-module id="neon-animation-examples">
@@ -14,11 +15,13 @@
     </style>
     <div>
       <paper-tabs selected="{{selected}}">
-        <paper-tab>Basic</paper-tab>
+        <paper-tab>basic</paper-tab>
+        <paper-tab>cascaded-animation</paper-tab>
       </paper-tabs>
 
       <iron-pages selected="{{selected}}">
         <section><x-basic></x-basic></section>
+        <section><x-cascaded></x-cascaded></section>
       </iron-pages>
 
 
