--- a/lib/neon_animation_examples.html
+++ b/lib/neon_animation_examples.html
@@ -3,6 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="import" href="basic.html">
   <link rel="import" href="cascaded.html">
+  <link rel="import" href="fadein.html">
 </head>
 
 <dom-module id="neon-animation-examples">
@@ -17,11 +18,13 @@
       <paper-tabs selected="{{selected}}">
         <paper-tab>basic</paper-tab>
         <paper-tab>cascaded-animation</paper-tab>
+        <paper-tab>fade-in</paper-tab>
       </paper-tabs>
 
       <iron-pages selected="{{selected}}">
         <section><x-basic></x-basic></section>
         <section><x-cascaded></x-cascaded></section>
+        <section><fade-in></fade-in></section>
       </iron-pages>
 
 
